--- a/Dokumentacja/tex/rozdzial2.tex
+++ b/Dokumentacja/tex/rozdzial2.tex
@@ -4,7 +4,7 @@
 \subsection{Środowisko programistyczne}  %2.1
 
 \hspace{0.60cm}Aplikacja zostanie napisana korzystając z platformy Xamarin.Forms. Jest to środowisko umożliwiające tworzenie aplikacji za pomocą języka XAML oraz kodu w~języku C\#.
-Xamarin to platforma typu open source do tworzenia nowoczesnych i~wydajnych aplikacji dla systemów iOS, Android i Windows za pomocą platformy .NET. Xamarin to warstwa abstrakcji, która zarządza komunikacją udostępnionego kodu z bazowym kodem platformy. Xamarin.Forms umożliwia deweloperom tworzenie aplikacji Xamarin.iOS, Xamarin.Android i Windows z pojedynczej udostępnionej bazy kodu. Xamarin.Forms Umożliwia deweloperom tworzenie interfejsów użytkownika w języku XAML z użyciem kodu w języku C\#. Te interfejsy użytkownika są renderowane jako wydajne kontrolki natywne na każdej platformie. \\ Oto kilka przykładów funkcji udostępnianych przez Xamarin.Forms:
+Xamarin to platforma typu open source do tworzenia nowoczesnych i~wydajnych aplikacji dla systemów iOS, Android i Windows za pomocą platformy .NET. Xamarin to warstwa abstrakcji, która zarządza komunikacją udostępnionego kodu z~bazowym kodem platformy. Xamarin.Forms umożliwia deweloperom tworzenie aplikacji Xamarin.iOS, Xamarin.Android i Windows z pojedynczej udostępnionej bazy kodu. Xamarin.Forms Umożliwia deweloperom tworzenie interfejsów użytkownika w~języku XAML z użyciem kodu w języku C\#. Te interfejsy użytkownika są renderowane jako wydajne kontrolki natywne na każdej platformie. \\ Oto kilka przykładów funkcji udostępnianych przez Xamarin.Forms:
 
 \begin{itemize}
 	\item Język interfejsu użytkownika XAML,
