--- a/Dokumentacja/tex/rozdzial3.tex
+++ b/Dokumentacja/tex/rozdzial3.tex
@@ -36,7 +36,7 @@
 
 \subsubsection{Zakładka Kroki} %3.2.1
 
-\hspace{0.60cm}W zakładce Kroki rys. \ref{rys:rysunek001a} (s. \pageref{rys:rysunek001a}) wyświetalana zostaje aktualna, obliczana w czasie rzeczywistym liczba odbytych kroków od czasu rozpoczęcia treningu. Początkowo liczba kroków równa się 0. Aplikacja liczy kroki od momentu nasiśnięcia przycisku \textbf{Start} w zakładce Trening (s. \pageref{rys:rysunek001b}). Liczenie kroków dokonuje się z wykorzystaniem modułu akcelerometra. Akcelerometr to wbudowany komponent do pomiaru przyspieszenia dowolnego urządzenia mobilnego. Ruchy takie jak kołysanie, przechylanie, obracanie, drżenie są wykrywane za pomocą akcelerometru. Wartość XYZ służy do obliczania i wykrywania ruchów. Współrzędne X, Y oraz Z reprezentują kierunek i położenie urządzenia wg. tych osi, w którym nastąpiło przyspieszenie. Dodatkowo przyspieszenie urządzenia obejmuje również przyspieszenie ziemskie (g = 9,81m/s2), które również należy uwzględnić w celu dokłądnego pomiaru.
+\hspace{0.60cm}W zakładce Kroki rys. \ref{rys:rysunek001a} (s. \pageref{rys:rysunek001a}) wyświetalana zostaje aktualna, obliczana w czasie rzeczywistym liczba odbytych kroków od czasu rozpoczęcia treningu. Początkowo liczba kroków równa się 0. Aplikacja liczy kroki od momentu nasiśnięcia przycisku \textbf{Start} w zakładce Trening (s. \pageref{rys:rysunek001b}). Liczenie kroków dokonuje się z wykorzystaniem modułu akcelerometra. Akcelerometr to wbudowany komponent do pomiaru przyspieszenia dowolnego urządzenia mobilnego. Ruchy takie jak kołysanie, przechylanie, obracanie, drżenie są wykrywane za pomocą akcelerometru. Wartość XYZ służy do obliczania i wykrywania ruchów. Współrzędne X, Y oraz Z reprezentują kierunek i~położenie urządzenia wg. tych osi, w którym nastąpiło przyspieszenie. Dodatkowo przyspieszenie urządzenia obejmuje również przyspieszenie ziemskie (g = 9,81m/s2), które również należy uwzględnić w celu dokłądnego pomiaru.
 
 Obliczanie ogólnego przyspieszenia urządzenia polega na pobieraniu z sensora wartości odpowiednio X, Y oraz Z. Następnie wartości te podstawiane są do odpowiedniego wzoru $\sqrt{(X*X + Y*Y + Z*Z) - 9,81}$, który wykorzystuje też wartość przyspieszenia ziemskiego. Zliczanie kolejnych kroków, począwszy od wartości 0, wykonuje się przy pomocy instrukcji warunkowej if oraz pętli for. Dodatkowo, celu niwelacji niedokładności w pomiarach, zliczane są one dopiero po odbyciu 6 kroków. Listing \ref{lst:listing-ps1} przedstawia za pomocą pseudokodu ogólną zasadę obliczania przyspieszenia:
 
