--- a/Dokumentacja/tex/rozdzial5.tex
+++ b/Dokumentacja/tex/rozdzial5.tex
@@ -2,4 +2,27 @@
 \section{Testowanie}	%5
 %Opisujemy testy, sprawdzamy czy nie generuje błędów.
 
+\subsection{Testowanie poszczególnych funkcjonalności}	%5.1
 
+\begin{table}[h!]
+	\begin{tabular}{|lll|}
+		\hline
+		\multicolumn{3}{|c|}{{\large Testowanie działania aplikacji}}                               \\ \hline
+		\multicolumn{1}{|c|}{Testowana funkcjonalność} & \multicolumn{1}{c|}{Stan} & \multicolumn{1}{c|}{Uwagi} \\ \hline
+		\multicolumn{1}{|l|}{Uruchomienie aplikacji}   & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{Liczenie kroków w tle podczas używania aplikacji} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{Rozpoczęcie treningu przyciskiem START} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Odliczanie całkowitego czasu treningu\\w odpowiednich jednostkach czasu\end{tabular}} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Pomiar przebytego dystansu w odpowiednich\\jednostkach zależnuch od dystansu\end{tabular}} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Pomiar aktualnej prędkości biegu w km/h\end{tabular}} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Pomiar spalonych kalorii w zależności \\ od podanej wagi użytkownika\end{tabular}} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{Liczenie kroków tylko podczas treningu} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Wyświetlenie aktualnej lokalizacji\\użytkownikia na Mapach Google\end{tabular}} & \multicolumn{1}{l|}{Działa} &       \\ \hline
+		\multicolumn{1}{|l|}{Rysowanie za pomocą polilinii przebytej trasy} & \multicolumn{1}{l|}{Działa} &       \\ \hline
+		\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Wstrzymanie, Wznowienie i Zakończenie\\treningu za pomocą odpowiednich przycisków\end{tabular}} & \multicolumn{1}{l|}{Działa} &       \\ \hline
+		\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Wyświetlenie ekranu z podsumowaniem\\statystyk treningu\end{tabular}} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{Zapis statystyk treningów do Historii treningów} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{Możliwość wyczyszczenia Historii treningów} & \multicolumn{1}{l|}{Działa} & \\ \hline
+		\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Wyskakujące lokalne powiadomienia\\o treningu o określonej godzinie\end{tabular}} & \multicolumn{1}{l|}{Działa} & \\ \hline
+	\end{tabular}
+\end{table}
