--- a/Dokumentacja/tex/rozdzial3.tex
+++ b/Dokumentacja/tex/rozdzial3.tex
@@ -168,7 +168,7 @@ Wykorzystana w nim zostaje odpowiednia funkcja otwierająca widok statystyk i po
 
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=.2\linewidth]{rys/ustawienia2.jpg}
+	\includegraphics[width=.2\linewidth]{rys/ustawienia2.png}
 	\caption{Layout ustawień i opcji}
 	\label{rys:rysunek001e}
 \end{figure}
