Poprawki w doku + bib

--- a/Dokumentacja/bibliografia.bib
+++ b/Dokumentacja/bibliografia.bib
@@ -2,22 +2,14 @@
 % BIBLIOGRAFIA
 % ------------------------------------------------------------------------
 
-@BOOK{legierski,
-  AUTHOR =       {Tadeusz Legierski AND Janusz Wyrwał AND Jerzy Kasprzyk AND Janusz Hajda},
-  TITLE =        {Programowanie Sterowników PLC},
-  PUBLISHER =    {Wydawnictwo Pracowni Komputerowej Jacka Skalmierskiego},
-  LOCATION = 	 {Gliwice},
-  YEAR =         {1998},
-}
-
 @online{www1,
-  TITLE =        {Strona internetowa firmy SELS},
-  URL =    		 {http://www.sels.com.pl/index.php?cPath=1},
-  URLDATE =		 {2012-10-29}
+  TITLE =        {Strona internetowa firmy Microsoft},
+  URL =    		 {https://visualstudio.microsoft.com/pl/vs},
+  URLDATE =		 {2012-10-22}
 }
 
 @online{www2,
-	TITLE =        {Strona internetowa TexLive},
-	URL =    		 {https://www.tug.org/texlive/acquire-netinstall.html},
-	URLDATE =		 {2022-10-08}
+	TITLE =        {Strona internetowa narzędzia Git For Windows},
+	URL =    		 {https://git-scm.com/download/win},
+	URLDATE =		 {2022-10-22}
 }
