--- a/Dokumentacja/tex/rozdzial1.tex
+++ b/Dokumentacja/tex/rozdzial1.tex
@@ -79,6 +79,6 @@ Ekran zawierający historię odbytych treningów Rys. \ref{rys:rysunek005} (s. \
 	\end{minipage}
 \end{figure} 
 
-Aby ułatwić użytkownikom nawigację po aplikacji, na dole ekranu powinno znajdować się intuicyjne menu, które pozwoli na szybkie przejście między poszczególnymi funkcjami. W menu tym powinny znaleźć się przyciski, które po kliknięciu przeniosą użytkownika do ekranu krokomierza, treningu, historii odbytych treningów oraz ekranu ustawień. Dzięki takiemu rozwiązaniu użytkownicy będą mogli łatwo i szybko dostępować do interesujących ich funkcji, co zwiększy komfort i efektywność korzystania z aplikacji.
+Aby ułatwić użytkownikom nawigację po aplikacji, na dole ekranu powinno znajdować się intuicyjne menu, które pozwoli na szybkie przejście między poszczególnymi funkcjami. W menu tym powinny znaleźć się przyciski, które po kliknięciu przeniosą użytkownika do ekranu krokomierza, treningu, historii odbytych treningów oraz ekranu ustawień. Dzięki takiemu rozwiązaniu użytkownicy będą mogli łatwo i~szybko dostępować do interesujących ich funkcji, co zwiększy komfort i efektywność korzystania z aplikacji.
 
 Kolorystyka aplikacji powinna być starannie dobrana, aby zapewnić przyjemne i komfortowe doświadczenie użytkownikom. Optymalnym rozwiązaniem będzie zastosowanie odcieni zieleni, które są łagodne dla oczu i nie powodują dyskomfortu podczas dłuższej pracy z aplikacją. Dodatkowo, modernistyczny i nowoczesny wygląd aplikacji pozwoli użytkownikom poczuć, że korzystają z produktu wysokiej jakości, co zwiększy ich zadowolenie i satysfakcję z jej użytkowania. Dlatego ważne jest, aby projekt graficzny był przemyślany i dopracowany, aby spełniał wszystkie wymagania funkcjonalne i estetyczne.
