--- a/Dokumentacja/tex/rozdzial5.tex
+++ b/Dokumentacja/tex/rozdzial5.tex
@@ -2,9 +2,12 @@
 \section{Testowanie}	%5
 %Opisujemy testy, sprawdzamy czy nie generuje błędów.
 
-\subsection{Testowanie poszczególnych funkcjonalności}	%5.1
+\hspace{0.60cm}Testowanie poszczególnych funkcjonalności aplikacji przedstawione w tabeli \ref{tab:tabela1}.
 
 \begin{table}[h!]
+	\centering
+	\caption{Testowanie funkcjonalości.}
+	\label{tab:tabela1}
 	\begin{tabular}{|lll|}
 		\hline
 		\multicolumn{3}{|c|}{{\large Testowanie działania aplikacji}}                               \\ \hline
