--- a/Dokumentacja/tex/rozdzial2.tex
+++ b/Dokumentacja/tex/rozdzial2.tex
@@ -32,10 +32,11 @@ Dodatkowo, w celu koordynacji wykonywania projektu, organizacji kodu oraz ogóln
 
 \subsection{Moduł GPS}  %2.4
 
-\hspace{0.60cm}W zakładce Trening aplikacja będzie wyświetlała pomiar biegu użytkownika, a~dokładniej mówiąc pomiar przebiegniętego dystansu, prędkości biegu w danej chwili oraz czasu . Odbywa się to na podstawie informacji o jego pozycji. Można to zrealizować na kilka sposobów. Te sposoby to: wykorzystanie globalnego systemu pozycjonowania (GPS), technologia lokalizacji wieży komórkowej lub lokalizacja za pomocą WiFi Powinno się wybrać sposób najbardziej odpowiedni dla naszej aplikacji biorąc pod uwagę przede wszystkim środowisko w jakim będzie ona używana. \\ 
+\hspace{0.60cm}W zakładce Trening aplikacja będzie wyświetlała pomiar biegu użytkownika, a~dokładniej mówiąc pomiar przebiegniętego dystansu, prędkości biegu w danej chwili oraz czasu . Odbywa się to na podstawie informacji o jego pozycji. Można to zrealizować na kilka sposobów. Te sposoby to: wykorzystanie globalnego systemu pozycjonowania (GPS), technologia lokalizacji wieży komórkowej lub lokalizacja za pomocą WiFi Powinno się wybrać sposób najbardziej odpowiedni dla naszej aplikacji biorąc pod uwagę przede wszystkim środowisko w jakim będzie ona używana.
+ 
 W naszym przypadku jest to system GPS, gdyż zapewnia on najdokładniejsze dane lokalizycyjne, wykorzystuje najwięcej mocy i działa najlepiej na zewnątrz, co w naszym przypadku jest kluczowe dla odpowiedniego działania aplikacji. Zakładając, że użytkownik przemieszcza się, można zdefiniować jego pozycję z dokładnością od około 6 do 100 metrów.
 
-\hspace{0.60cm}Aplikacja z obsługą lokalizacji wymaga dostępu do czujników sprzętowych urządzenia w celu odbierania danych GPS. Dostęp jest kontrolowany za pomocą odpowiednich uprawnień w manifeście Androida aplikacji (plik AndroidManifest.xml). \\ Dostępne są dwa uprawnienia: \\ \textit{ACCESS\_COARSE\_LOCATION} - zapewnia aplikacji dostęp do dostawcy GPS oraz \textit{ACCESS\_FINE\_LOCATION} - umożliwia aplikacji dostęp do sieci komórkowej i~WiFi lokalizacji. Wymagane dla dostawcy sieci gdy ACCESS\_COARSE\_LOCATION jest nieustawiony.
+Aplikacja z obsługą lokalizacji wymaga dostępu do czujników sprzętowych urządzenia w celu odbierania danych GPS. Dostęp jest kontrolowany za pomocą odpowiednich uprawnień w manifeście Androida aplikacji (plik AndroidManifest.xml). \\ Dostępne są dwa uprawnienia: \\ \textit{ACCESS\_COARSE\_LOCATION} - zapewnia aplikacji dostęp do dostawcy GPS oraz \textit{ACCESS\_FINE\_LOCATION} - umożliwia aplikacji dostęp do sieci komórkowej i~WiFi lokalizacji. Wymagane dla dostawcy sieci gdy ACCESS\_COARSE\_LOCATION jest nieustawiony.
 
 \subsection{Mapy Google}  %2.5
 
