--- a/Dokumentacja/tex/rozdzial6.tex
+++ b/Dokumentacja/tex/rozdzial6.tex
@@ -4,15 +4,15 @@
 
 \subsection{Informacje ogólne od autorów} %6.1
 
-Witamy w naszej aplikacji mobilnej na Androida do biegania, Runly! Ta aplikacja została zaprojektowana, aby pomóc biegaczom śledzić ich treningi, wyznaczać cele i monitorować postępy. Śledzi ona różne pomiary takie jak kroki, czas, prędkość, dystans i spalone kalorie.
+\hspace{0.60cm}Witamy w naszej aplikacji mobilnej na Androida do biegania, Runly! Ta aplikacja została zaprojektowana, aby pomóc biegaczom śledzić ich treningi, wyznaczać cele i monitorować postępy. Śledzi ona różne pomiary takie jak kroki, czas, prędkość, dystans i spalone kalorie.
 
 \subsection{Wymagania sprzętowe i systemowe} %6.2
 
-Aby korzystać z tej aplikacji, potrzebujesz smartfona lub tabletu z systemem Android w wersji 5.0 lub nowszej, wyposażony w sensor akcelerometra oraz GPS. Będziesz także potrzebować połączenia internetowego, aby uzyskać dostęp do niektórych funkcji, takich jak lokalizacja GPS i wyświetlanie Map Google.
+\hspace{0.60cm}Aby korzystać z tej aplikacji, potrzebujesz smartfona lub tabletu z systemem Android w wersji 5.0 lub nowszej, wyposażony w sensor akcelerometra oraz GPS. Będziesz także potrzebować połączenia internetowego, aby uzyskać dostęp do niektórych funkcji, takich jak lokalizacja GPS i wyświetlanie Map Google.
 
 \subsection{Uprawnienia aplikacji}
 
-Aby aplikacja do biegania działała poprawnie, użytkownik będzie musiał nadać jej następujące uprawnienia:
+\hspace{0.60cm}Aby aplikacja do biegania działała poprawnie, użytkownik będzie musiał nadać jej następujące uprawnienia:
 
 \begin{itemize}
 	\item Lokalizacja GPS: To uprawnienie jest wymagane, aby aplikacja mogła uzyskać dostęp do GPS urządzenia i wyświetlić lokalizację użytkownika na mapie,
@@ -23,7 +23,7 @@ Aby przyznać te uprawnienia, użytkownik będzie musiał przejść do ustawień
 
 \subsection{Jak korzystać z tej aplikacji}
 
-Wyszukaj, pobierz i zainstaluj aplikację Runly ze sklepu Google Play.
+\hspace{0.60cm}Wyszukaj, pobierz i zainstaluj aplikację Runly ze sklepu Google Play.
 
 \begin{figure}[!htb]
 	\centering
