--- a/Dokumentacja/tex/rozdzial5.tex
+++ b/Dokumentacja/tex/rozdzial5.tex
@@ -10,8 +10,8 @@
 	\label{tab:tabela1}
 	\begin{tabular}{|lll|}
 		\hline
-		\multicolumn{3}{|c|}{{\large Testowanie działania aplikacji}}                               \\ \hline
-		\multicolumn{1}{|c|}{Testowana funkcjonalność} & \multicolumn{1}{c|}{Stan} & \multicolumn{1}{c|}{Uwagi} \\ \hline
+		\rowcolor{gray}\multicolumn{3}{|c|}{{\large Testowanie działania aplikacji}}                               \\ \hline
+		\rowcolor{lightgray}\multicolumn{1}{|c|}{Testowana funkcjonalność} & \multicolumn{1}{c|}{Stan} & \multicolumn{1}{c|}{Uwagi} \\ \hline
 		\multicolumn{1}{|l|}{Uruchomienie aplikacji}   & \multicolumn{1}{l|}{Działa} & \\ \hline
 		\multicolumn{1}{|l|}{Liczenie kroków w tle podczas używania aplikacji} & \multicolumn{1}{l|}{Działa} & \\ \hline
 		\multicolumn{1}{|l|}{Rozpoczęcie treningu przyciskiem START} & \multicolumn{1}{l|}{Działa} & \\ \hline
