--- a/Dokumentacja/preambula_pakiety.tex
+++ b/Dokumentacja/preambula_pakiety.tex
@@ -64,8 +64,9 @@ sorting=none
 %============
 
 \usepackage{listings}
-\usepackage{xcolor}
-
+%\usepackage{xcolor}
+\usepackage[table]{xcolor}
+\usepackage{colortbl}
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
