--- a/Dokumentacja/tex/rozdzial2.tex
+++ b/Dokumentacja/tex/rozdzial2.tex
@@ -3,7 +3,7 @@
 
 \subsection{Środowisko programistyczne}  %2.1
 
-\hspace{0.60cm}Aplikacja zostanie napisana korzystając z platformy Xamarin.Forms. Jest to środowisko umożliwiające tworzenie aplikacji za pomocą języka XAML oraz kodu w~języku C\#.
+\hspace{0.60cm}Aplikacja zostanie napisana korzystając z platformy Xamarin.Forms\footnote{Dokumentacja Xamarin.Forms   hhttps://learn.microsoft.com/en-us/xamarin/xamarin-forms/\cite{www6}.}. Jest to środowisko umożliwiające tworzenie aplikacji za pomocą języka XAML oraz kodu w~języku C\#.
 Xamarin to platforma typu open source do tworzenia nowoczesnych i~wydajnych aplikacji dla systemów iOS, Android i Windows za pomocą platformy .NET. Xamarin to warstwa abstrakcji, która zarządza komunikacją udostępnionego kodu z~bazowym kodem platformy. Xamarin.Forms umożliwia deweloperom tworzenie aplikacji Xamarin.iOS, Xamarin.Android i Windows z pojedynczej udostępnionej bazy kodu. Xamarin.Forms Umożliwia deweloperom tworzenie interfejsów użytkownika w~języku XAML z użyciem kodu w języku C\#. Te interfejsy użytkownika są renderowane jako wydajne kontrolki natywne na każdej platformie. \\ Oto kilka przykładów funkcji udostępnianych przez Xamarin.Forms:
 
 \begin{itemize}
@@ -33,17 +33,17 @@ Dodatkowo, w celu koordynacji wykonywania projektu, organizacji kodu oraz ogóln
 \subsection{Moduł GPS}  %2.4
 
 \hspace{0.60cm}W zakładce Trening aplikacja będzie wyświetlała pomiar biegu użytkownika, a~dokładniej mówiąc pomiar przebiegniętego dystansu, prędkości biegu w danej chwili oraz czasu . Odbywa się to na podstawie informacji o jego pozycji. Można to zrealizować na kilka sposobów. Te sposoby to: wykorzystanie globalnego systemu pozycjonowania (GPS), technologia lokalizacji wieży komórkowej lub lokalizacja za pomocą WiFi Powinno się wybrać sposób najbardziej odpowiedni dla naszej aplikacji biorąc pod uwagę przede wszystkim środowisko w jakim będzie ona używana.
- 
-W naszym przypadku jest to system GPS, gdyż zapewnia on najdokładniejsze dane lokalizycyjne, wykorzystuje najwięcej mocy i działa najlepiej na zewnątrz, co w naszym przypadku jest kluczowe dla odpowiedniego działania aplikacji. Zakładając, że użytkownik przemieszcza się, można zdefiniować jego pozycję z dokładnością od około 6 do 100 metrów.
+
+W naszym przypadku jest to system GPS, gdyż zapewnia on najdokładniejsze dane lokalizycyjne, wykorzystuje najwięcej mocy i działa najlepiej na zewnątrz, co~w~naszym przypadku jest kluczowe dla odpowiedniego działania aplikacji. Zakładając, że użytkownik przemieszcza się, można zdefiniować jego pozycję z dokładnością od około 6 do 100 metrów.
 
 Aplikacja z obsługą lokalizacji wymaga dostępu do czujników sprzętowych urządzenia w celu odbierania danych GPS. Dostęp jest kontrolowany za pomocą odpowiednich uprawnień w manifeście Androida aplikacji (plik AndroidManifest.xml). \\ Dostępne są dwa uprawnienia: \\ \textit{ACCESS\_COARSE\_LOCATION} - zapewnia aplikacji dostęp do dostawcy GPS oraz \textit{ACCESS\_FINE\_LOCATION} - umożliwia aplikacji dostęp do sieci komórkowej i~WiFi lokalizacji. Wymagane dla dostawcy sieci gdy ACCESS\_COARSE\_LOCATION jest nieustawiony.
 
 \subsection{Mapy Google}  %2.5
 
-\hspace{0.60cm}W zakładce Trening będzie wyświetlana również, korzystając z modułu GPS, aktualna pozycja użytkownika na Mapach Google. Dostęp do Map Google jest możliwy dzięki API (Maps SDK for Android) udostępnianego przez Google. Dostęp do tego API jest uzyskiwany z kluczem API, który został wygenerowany w panelu Google Cloud API. Możliwość wyświetlania pobranej mapy w aplikacji jest możliwa korzystając z pakietu NuGet Xamarin.Forms.Maps. Na mapie będzie także rysowana linią (klasa Polyline z wyżej wymienionego pakietu) trasa przebyta w trakcie treningu. 
+\hspace{0.60cm}W zakładce Trening będzie wyświetlana również, korzystając z modułu GPS, aktualna pozycja użytkownika na Mapach Google. Dostęp do Map Google jest możliwy dzięki API (Maps SDK for Android) udostępnianego przez Google. Dostęp do~tego API jest uzyskiwany z kluczem API, który został wygenerowany w panelu Google Cloud API. Możliwość wyświetlania pobranej mapy w aplikacji jest możliwa korzystając z pakietu NuGet Xamarin.Forms.Maps\footnote{Dokumentacja na stronie   https://learn.microsoft.com/en-us/xamarin/xamarin-forms/user-interface/map/setup\cite{www3}.}. Na mapie będzie także rysowana linią (klasa Polyline z wyżej wymienionego pakietu) trasa przebyta w trakcie treningu. 
 
 \subsection{Baza danych SQLite} %2.6
 
-\hspace{0.60cm}SQLite to mała, szybka i przystosowana do osadzania baza danych SQL oparta na systemie plików typu open source. Nie posiada oddzielnego komponentu serwerowego, jak tradycyjne bazy danych. Jest ona darmowa i zawiera wszystko co najważniejsze w relacyjnej bazie danych. Jest ona najczęściej instalowana na serwerach. Pozwala zgrabnie zarządzać użytkownikami i świetnie nadaje się do małych oraz średniej wielkości projektów. Znajduje się w dokładnie jednym pliku. Bardzo często wybierana jako baza dla aplikacji iOS oraz Android. Wspiera SQL. Sprawdza się na urządzeniach z ograniczoną możliwościami instalacji dodatkowego oprogramowania, takimi jak smartfony, dekodery i telewizory. Również jest świetnym silnikiem bazodanowym dla witryn o niskim i średnim ruchu. Przy odpowiedniej konfiguracji jest wydajny i może pełnić rolę zarówno silnika do analizy dużego zbioru informacji jak i cache serwer dla danych z częstym odczytem.
+\hspace{0.60cm}SQLite to mała, szybka i przystosowana do osadzania baza danych SQL oparta na systemie plików typu open source. Nie posiada oddzielnego komponentu serwerowego, jak tradycyjne bazy danych. Jest ona darmowa i zawiera wszystko co~najważniejsze w relacyjnej bazie danych. Jest ona najczęściej instalowana na serwerach. Pozwala zgrabnie zarządzać użytkownikami i świetnie nadaje się do małych oraz średniej wielkości projektów. Znajduje się w dokładnie jednym pliku. Bardzo często wybierana jako baza dla aplikacji iOS oraz Android. Wspiera SQL. Sprawdza się na urządzeniach z ograniczoną możliwościami instalacji dodatkowego oprogramowania, takimi jak smartfony, dekodery i telewizory. Również jest świetnym silnikiem bazodanowym dla witryn o niskim i średnim ruchu. Przy odpowiedniej konfiguracji jest wydajny i może pełnić rolę zarówno silnika do analizy dużego zbioru informacji jak i cache serwer dla danych z częstym odczytem.
 
 
