--- a/Dokumentacja/tex/rozdzial4.tex
+++ b/Dokumentacja/tex/rozdzial4.tex
@@ -6,7 +6,7 @@
 
 \subsubsection{Zakładka Historia} %4.1.1
 
-\hspace{0.60cm}Listing \ref{lst:listing-cpp} przedstawia sposób inicjalizacji połączenia z bazą danych SQLite:
+\hspace{0.60cm}Listing \ref{lst:listing-cpp} przedstawia sposób inicjalizacji połączenia z bazą danych SQLite\footnote{Dokumentacja pakietu na stronie   https://github.com/praeclarum/sqlite-net/wiki\cite{www4}.}:
 \begin{lstlisting}[caption=Połączenie z bazą danych, label={lst:listing-cpp}, language=C++]
 	public History()
 	{
@@ -93,7 +93,7 @@ Listing \ref{lst:listing-cpp5} przedstawia sposób w jaki dane z bazy danych zos
 	}
 \end{lstlisting}
 
-Listing \ref{lst:listing-cpp7} zawiera funkcję pobierająca lokalizację. Od lini 4 pobieramy aktualne dane lokalizacji użytkownika. Linia 12 ustawia widok na lokalizację użytkownika. Od~lini 15 zapisujemy pobrane wcześniej dane do bazy danych.
+Listing \ref{lst:listing-cpp7} zawiera funkcję pobierająca lokalizację\footnote{Dokumentacja klasy Geolocation, używanej do pobrania lokalizacji   https://learn.microsoft.com/en-us/xamarin/essentials/geolocation?tabs=android\cite{www5}.}. Od lini 4 pobieramy aktualne dane lokalizacji użytkownika. Linia 12 ustawia widok na lokalizację użytkownika. Od~lini 15 zapisujemy pobrane wcześniej dane do bazy danych.
 W lini 26 wywołujemy funkcję aktualizującą dane na ekranie. Na końcu po dwóch sekundach wywołujemy znów tą samą metodę.
 \begin{lstlisting}[caption=Pobranie lokalizacji, label={lst:listing-cpp7}, language=C++]
 	private async void GetLocation()
@@ -220,7 +220,7 @@ Listing \ref{lst:listing-cpp10} umożliwia zakończenie treningu oraz obsługę 
 
 Listing \ref{lst:listing-cpp11} zawiera funkcję aktualizującą informacje na ekranie. Funkcja zaczyna się od narysowanie trasy na mapie. Odbywa się to przez narysowanie lini pomiędzy dwoma ostatnimi lokalizacjami użytkowanika. Od lini 18 następuje wyliczenie danych pomiarowych takich jak droga, prędkość, kalorie. Od lini 32 wypisujemy drogę w formacie odpowiednim do wartości przebytej trasy. Od lini 54 wypisujemy prędkość w formacie odpowiednim do wartości aktualnej prędkości. Od lini 59 wypisujemy kalorie w formacie odpowiednim do wartości spalonych kalorii. 
 \begin{lstlisting}[caption=Aktualizowanie informacji na ekranie, label={lst:listing-cpp11}, language=C++]
-	 private void UpdateInfo()
+	private void UpdateInfo()
 	{
 		//polyline rysuje trase na mapie
 		Polyline polyline = new Polyline();
@@ -346,92 +346,92 @@ Listing \ref{lst:listing-cpp12} wykonuje zapis danych treningu do bazy danych:
 				amountSteps.Text = stepsNumber.ToString();
 			}
 		}
-\end{lstlisting}
-
-Listing \ref{lst:listing-cpp14} zawiera funkcję dającą możliwość rozpoczęcia i zakończenia liczenia kroków. W zależności od tego czy akcelerometr działa po naciśnięciu przycisku będzie on zatrzymany albo uruchomiony.
-\begin{lstlisting}[caption=Rozpoczęcia i zakończenie liczenia kroków, label={lst:listing-cpp14}, language=C++]
-	void Button_Cliked(object sender, EventArgs e) 
-	{
-		try
+	\end{lstlisting}
+	
+	Listing \ref{lst:listing-cpp14} zawiera funkcję dającą możliwość rozpoczęcia i zakończenia liczenia kroków. W zależności od tego czy akcelerometr działa po naciśnięciu przycisku będzie on zatrzymany albo uruchomiony.
+	\begin{lstlisting}[caption=Rozpoczęcia i zakończenie liczenia kroków, label={lst:listing-cpp14}, language=C++]
+		void Button_Cliked(object sender, EventArgs e) 
 		{
-			if (Accelerometer.IsMonitoring)
+			try
 			{
-				Accelerometer.Stop();
-				btn.Text = "Start";
-			}   
-			else
-			{
-				Accelerometer.Start(SensorSpeed.UI);
-				btn.Text = "Stop";
+				if (Accelerometer.IsMonitoring)
+				{
+					Accelerometer.Stop();
+					btn.Text = "Start";
+				}   
+				else
+				{
+					Accelerometer.Start(SensorSpeed.UI);
+					btn.Text = "Stop";
+				}
+				
 			}
-			
-		}
-		catch (FeatureNotSupportedException fnsEx)
-		{
-			// Not supported on device
-		}
-		catch (Exception ex)
-		{
-			// Something else went wrong
-		}
-	}
-\end{lstlisting}
-
-\subsubsection{Zakładka Ustawienia} %4.1.3
-
-\hspace{0.60cm}Listing \ref{lst:listing-cpp15} jest to funkcja wywołana po kliknięciu w wybraną opcję. Otwiera ona popup w którym użytkownik może wprowadzić własne prarametry dla danej opcji. Po zatwierdzeniu opcji zostają one przypisane dla określonego prarametru ustawień aplikacji i są zapamiętane.
-\begin{lstlisting}[caption=Otwarcie popup do wprowadzenia danych, label={lst:listing-cpp15}, language=C++]
-	public async void Open_Popup(object sender, EventArgs e)
-	{
-		var option = (Xamarin.Forms.Button)sender;
-		int id = Int16.Parse(option.ClassId);
-		string result = await DisplayPromptAsync(options[id], "");
-		Preferences.Set(options[id], result);
-		Display_Options();
-	}
-\end{lstlisting}
-
-Listing \ref{lst:listing-cpp16} jest to funkcja służąca do ustawienia powiadomienia o treningu. Wywołana jest ona po kliknięciu w odpowiednią opcję. Otwiera ona popup w którym użytkownik wprowadza godzinę o której chciałby otrzymać powiadomienie. Następnie od 14 linii następuje ustawienie zmiennej liczącej czas do treningu. Od linii 18 ustawiane są dane powiadomiena. W linii 30 wywołujemy funkcję tworzącą powiadomienie ustawione wcześniej. 
-\begin{lstlisting}[caption=Ustawienie powiadomienia o treningu, label={lst:listing-cpp16}, language=C++]
-	public async void Set_Notification(object sender, EventArgs e)
-	{
-		int hour;
-		bool valid = false;
-		do {
-			string result = await DisplayPromptAsync("Podaj godzine. 0-23", "");
-			if (result == null)
-			result = "18";
-			hour = Int16.Parse(result);
-			if(hour <= 23 && hour >= 0)
-			valid = true;
-		} while (!valid);
-			
-		DateTime setTime = new DateTime(DateTime.Now.Year, DateTime.Now.Month, DateTime.Now.Day, hour, 0, 0);
-		int seconds = (setTime.Hour - DateTime.Now.Hour) * 3600 - DateTime.Now.Minute * 60 + DateTime.Now.Second;
-		Console.WriteLine(seconds);
-		
-		var notification = new NotificationRequest
-		{
-			BadgeNumber = 1,
-			Description = "Wyglada, ze zapomniales o treningu",
-			Title = "Runly",
-			NotificationId = 1337,
-			Schedule =
+			catch (FeatureNotSupportedException fnsEx)
 			{
-				NotifyTime = DateTime.Now.AddSeconds(seconds),
-				RepeatType = NotificationRepeat.Daily,            
+				// Not supported on device
 			}
-		};
-		LocalNotificationCenter.Current.Show(notification);
-	}
-\end{lstlisting}
-
-Listing \ref{lst:listing-cpp17} jest to funkcja, która pobiera z preferencji aplikacji parametry opcji i wyświetla je przy odpowiedniej opcji na ekranie. W przypadku braku ustawienia wartości dla danej opcji wcześniej przez użytkownika wyświetlana jest wartość domyślna opcji. 
-\begin{lstlisting}[caption=Wyświetlenie ustawionych opcji w widoku, label={lst:listing-cpp17}, language=C++]
-	public void Display_Options()
-	{
-		Login.Text = Preferences.Get(options[0], "User");
-		Waga.Text = Preferences.Get(options[2], "70");
-		Wiek.Text = Preferences.Get(options[3], "20");
-	}
-\end{lstlisting}
+			catch (Exception ex)
+			{
+				// Something else went wrong
+			}
+		}
+	\end{lstlisting}
+	
+	\subsubsection{Zakładka Ustawienia} %4.1.3
+	
+	\hspace{0.60cm}Listing \ref{lst:listing-cpp15} jest to funkcja wywołana po kliknięciu w wybraną opcję. Otwiera ona popup w którym użytkownik może wprowadzić własne prarametry dla danej opcji. Po zatwierdzeniu opcji zostają one przypisane dla określonego prarametru ustawień aplikacji i są zapamiętane\footnote{Dokumentacja Preferences API for Xamarin   https://learn.microsoft.com/en-us/xamarin/essentials/preferences?tabs=android\cite{www7}.}.
+	\begin{lstlisting}[caption=Otwarcie popup do wprowadzenia danych, label={lst:listing-cpp15}, language=C++]
+		public async void Open_Popup(object sender, EventArgs e)
+		{
+			var option = (Xamarin.Forms.Button)sender;
+			int id = Int16.Parse(option.ClassId);
+			string result = await DisplayPromptAsync(options[id], "");
+			Preferences.Set(options[id], result);
+			Display_Options();
+		}
+	\end{lstlisting}
+	
+	Listing \ref{lst:listing-cpp16} jest to funkcja służąca do ustawienia powiadomienia o treningu. Wywołana jest ona po kliknięciu w odpowiednią opcję. Otwiera ona popup w którym użytkownik wprowadza godzinę o której chciałby otrzymać powiadomienie. Następnie od 14 linii następuje ustawienie zmiennej liczącej czas do treningu. Od linii 18 ustawiane są dane powiadomiena. W linii 30 wywołujemy funkcję tworzącą powiadomienie ustawione wcześniej. 
+	\begin{lstlisting}[caption=Ustawienie powiadomienia o treningu, label={lst:listing-cpp16}, language=C++]
+		public async void Set_Notification(object sender, EventArgs e)
+		{
+			int hour;
+			bool valid = false;
+			do {
+				string result = await DisplayPromptAsync("Podaj godzine. 0-23", "");
+				if (result == null)
+				result = "18";
+				hour = Int16.Parse(result);
+				if(hour <= 23 && hour >= 0)
+				valid = true;
+			} while (!valid);
+			
+			DateTime setTime = new DateTime(DateTime.Now.Year, DateTime.Now.Month, DateTime.Now.Day, hour, 0, 0);
+			int seconds = (setTime.Hour - DateTime.Now.Hour) * 3600 - DateTime.Now.Minute * 60 + DateTime.Now.Second;
+			Console.WriteLine(seconds);
+			
+			var notification = new NotificationRequest
+			{
+				BadgeNumber = 1,
+				Description = "Wyglada, ze zapomniales o treningu",
+				Title = "Runly",
+				NotificationId = 1337,
+				Schedule =
+				{
+					NotifyTime = DateTime.Now.AddSeconds(seconds),
+					RepeatType = NotificationRepeat.Daily,            
+				}
+			};
+			LocalNotificationCenter.Current.Show(notification);
+		}
+	\end{lstlisting}
+	
+	Listing \ref{lst:listing-cpp17} jest to funkcja, która pobiera z preferencji aplikacji parametry opcji i wyświetla je przy odpowiedniej opcji na ekranie. W przypadku braku ustawienia wartości dla danej opcji wcześniej przez użytkownika wyświetlana jest wartość domyślna opcji. 
+	\begin{lstlisting}[caption=Wyświetlenie ustawionych opcji w widoku, label={lst:listing-cpp17}, language=C++]
+		public void Display_Options()
+		{
+			Login.Text = Preferences.Get(options[0], "User");
+			Waga.Text = Preferences.Get(options[2], "70");
+			Wiek.Text = Preferences.Get(options[3], "20");
+		}
+	\end{lstlisting}
